--- a/scss/style.scss
+++ b/scss/style.scss
@@ -390,47 +390,31 @@ a {
 }
 
 .we-help-section {
-	padding: 7rem 0;
+    padding: 7rem 0;
+    position: relative;
+    
+    &:before {
+        position: absolute;
+        content: "";
+        width: 255px;
+        height: 217px;
+        background-image: url('../images/dots-green.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        transform: translate(-40%, -40%);
+        z-index: -1;
+        left: 0; // Adjust these values to position the dots
+        top: 0;
+    }
 
-	.imgs-grid {
-		display: grid;
-		grid-template-columns: repeat(27, 1fr);
-		position: relative;
-		&:before {
-			position: absolute;
-			content: "";
-			width: 255px;
-			height: 217px;
-			background-image: url('../images/dots-green.svg');
-			background-size: contain;
-			background-repeat: no-repeat;
-			transform: translate(-40%, -40%);
-			z-index: -1;
-		}
-		.grid {
-			position: relative;
-			img {
-				border-radius: 20px;
-				max-width: 100%;
-			}
-			&.grid-1 {
-				grid-column: 1 / span 18;
-				grid-row: 1 / span 27;
-			}
-			&.grid-2 {
-				grid-column: 19 / span 27;
-				grid-row: 1 / span 5;
-				padding-left: 20px;
-			}
-			&.grid-3 {
-				grid-column: 14 / span 16;
-				grid-row: 6 / span 27;
-				padding-top: 20px;
-			}
-
-		}
-	}
-}	
+    img {
+        position: relative; // Add this to ensure image stays above dots
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        z-index: 1; // Add this to ensure image stays above dots
+    }
+}
 
 .custom-list {
 	width: 100%;
