Changes to products section

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ a {
 
 /* Water Treatment page hero */
 .hero-water-treatment {
-  background-image: url('../images/water-treatment-banner.jpg');
+  background-image: url('../images/products-banner.jpg');
   padding: 8rem 0 !important;
 }
 
