--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ a {
 
 /* Water Treatment page hero */
 .hero-water-treatment {
-  background-image: url('../images/products-banner.jpg');
+  background-image: url('../images/wastewaterequipments-banner.jpg');
   padding: 8rem 0 !important;
 }
 
